# mmcc-desktop-lib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/velocity_accel_controller/: CMakeLists.txt  exec  main.cpp
include/kot_motor/: kot_motor.hpp
src/controllers/: basic.cpp  basic.hpp  direct_position.cpp  direct_position.hpp  direct_torque.cpp  direct_torque.hpp  direct_velocity.cpp  direct_velocity.hpp  position_step.cpp  position_step.hpp  sub.hpp  velocity_accel.cpp  velocity_accel.hpp
src/dimensions/: dimensions.cpp  dimensions.hpp  meta.hpp
src/motor/: configs.hpp  motor.cpp  motor.hpp
src/transport/: basic_transport.cpp  basic_transport.hpp  socketcan_transport.cpp  socketcan_transport.hpp
